--- a/index.html
+++ b/index.html
@@ -425,9 +425,12 @@ position:absolute;
 <div id="photoSection" class="card hidden">
 <h2>Our Memories 📸</h2>
 <div class="gallery">
-<img src="photo1.jpg">
-<img src="photo2.jpg">
-<img src="photo3.jpg">
+<img src="photo1.jpeg">
+<img src="photo2.jpeg">
+<img src="photo3.jpeg">
+<img src="photo4.jpeg">
+<img src="photo5.jpeg">
+<img src="photo6.jpeg">
 </div>
 <button class="back" onclick="goBack('giftMenu')">Back</button>
 <button class="homeBtn" onclick="goHome()">🏠 Home</button>
@@ -555,6 +558,7 @@ gif.src="asking.gif";
 const quizData=[
 {question:"What is my favorite thing about you?",options:["Smile","Eyes","Everything"]},
 {question:"Our first inside joke?",options:["Frequencyyy","Happinesss","Bitchhh"]},
+{question:"Do you love me?",options:["Yes","Yes","Yes"]},
 {question:"Do you love me?",options:["Yes","Yes","Yes"]}
 ];
 
