--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ position:absolute;
 <!-- LOVE LETTER -->
 <div id="letterSection" class="card hidden">
 <h2>My Love Letter ❤️</h2>
-<p>Edit this text with your own love letter.</p>
+<p>Hello my little chimni this is a small gift from my side to you for our first Valentine's thoda sa unfinished hai website last mei thode se issues aa gaye lekin try kiya kuch accha banane ka and you have come into my life and it has been the best time of my life since then and i want to cherish you be better for us and our future and i am manifesting a beautiful peaceful life in the future with you thodu sa chiding on my bakchodiya and me manging maafi and then patkan se aap maan jaoge and then apan ice cream khayenge. YAYYYYYYYYY 💝</p>
 <button class="back" onclick="goBack('giftMenu')">Back</button>
 <button class="homeBtn" onclick="goHome()">🏠 Home</button>
 </div>
@@ -431,6 +431,10 @@ position:absolute;
 <img src="photo4.jpeg">
 <img src="photo5.jpeg">
 <img src="photo6.jpeg">
+<img src="photo7.jpeg">
+<img src="photo8.jpeg">
+<img src="photo9.jpeg">
+
 </div>
 <button class="back" onclick="goBack('giftMenu')">Back</button>
 <button class="homeBtn" onclick="goHome()">🏠 Home</button>
@@ -558,8 +562,10 @@ gif.src="asking.gif";
 const quizData=[
 {question:"What is my favorite thing about you?",options:["Smile","Eyes","Everything"]},
 {question:"Our first inside joke?",options:["Frequencyyy","Happinesss","Bitchhh"]},
-{question:"Do you love me?",options:["Yes","Yes","Yes"]},
-{question:"Do you love me?",options:["Yes","Yes","Yes"]}
+{question:"Do you love me?",options:["Yes","Yes obviously","Always yes ❤️"]},
+{question:"Who fell in love first?",options:["You","Me","Both at the same time ❤️"]},
+{question:"Who is cuter?",options:["You","Me","You obviously (correct answer 😌)"]},
+{question:"What is my biggest weakness?",options:["Your smile","Your voice","You are my strenthhhhh"]}
 ];
 
 let currentQ=0;
